# whale-tracker

./: .env.example  Cargo.toml  README.md
migrations/: 20250730095749_create_transfers.sql  20250923095327_create_index_blocks.sql
src/: config.rs  main.rs
src/proccessors/: mod.rs  transfers.rs
src/providers/: ethereum.rs  mod.rs
src/repositories/: indexed_blocks.rs  mod.rs  transfers.rs
src/services/: indexer.rs  mod.rs
