[package]
name = "whale-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.18", features = ["provider-ws", "rpc-types-eth"] }
dotenv = "0.15.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }
log = "0.4.28"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["blocking"] }
scraper = "0.24.0"
